# manage

./: .gitignore  Pipfile  README.md  prompt.py  pyproject.toml  requirements.txt  setup.py
em/: app.py  mng.py  notes.py  parsers.py  settings.py  storage.py  todo.py
em/apps/: __init__.py  notes.py  reminder.py  todo.py
em/apps/notes/: app.py  command.py  storage.py
em/apps/quiz/: app.py  command.py  srs.py
em/apps/reminder/: app.py  command.py  storage.py
em/apps/todo/: app.py  command.py  enums.py  storage.py
src/: manage.py  notes.py  storage.py  todo.py
