[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "em"
version = "0.1"
requires-python = ">=3.11"
dependencies = [
    "appdirs>=1.4.4",
    "click>=8.1.3",
    "pyperclip>=1.8.2",
    "python-dateutil>=2.8.2",
    "rich>=13.4.2",
]

[project.scripts]
em = "em.mng:main"
